dodanie powrotu do strony głównej, zmiana wielkości kontrolki silverlighta (łukasz specjalnie dla ciebie) ale i tak nie działa

--- a/DSClient/src/main/webapp/resources/css/visualization.css
+++ b/DSClient/src/main/webapp/resources/css/visualization.css
@@ -19,6 +19,7 @@ html, body {
 	    margin: 0;
     }
     #silverlightControlHost {
-	    height: 100%;
+        width: 400px;
+	    height: 400px;
 	    text-align:center;
     }
