--- a/Visualisation/Wiz/MainPage.xaml
+++ b/Visualisation/Wiz/MainPage.xaml
@@ -7,13 +7,14 @@
     xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
     xmlns:chartingPrimitivesToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting.Primitives;assembly=System.Windows.Controls.DataVisualization.Toolkit"
     mc:Ignorable="d"
-    d:DesignHeight="300" d:DesignWidth="500">
+    d:DesignHeight="300" d:DesignWidth="500"
+    >
 
     <Grid x:Name="LayoutRoot" Background="Transparent">
-        <Grid>
-            <StackPanel>
-                <ContentControl Content="Wizualizacja" HorizontalAlignment="Center" FontSize="14" FontWeight="Bold"/>
-                <chartingToolkit:Chart Width="500" Height="250">
+        <Grid Background="Transparent">
+            <StackPanel Background="Transparent">
+                <ContentControl Content="Wizualizacja" HorizontalAlignment="Center" FontSize="14" FontWeight="Bold" Background="Transparent"/>
+                <chartingToolkit:Chart Width="500" Height="250" >
                     <chartingToolkit:Chart.Series>
                         <chartingToolkit:LineSeries x:Name="lineSeries" ItemsSource="{Binding Series}" IndependentValueBinding="{Binding Key}" DependentValueBinding="{Binding Value}">
                             <!--IndependentValueBinding="{Binding Date}" DependentValueBinding="{Binding Percent}"-->
@@ -39,7 +40,7 @@
                 </chartingToolkit:Chart>
             </StackPanel>
         </Grid>
-        <StackPanel  Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom">
+        <StackPanel  Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom" >
             <TextBlock>File:</TextBlock>
             <TextBlock x:Name="urlTextBox">None</TextBlock>
         </StackPanel>
