--- a/Visualisation/Wiz/MainPage.xaml
+++ b/Visualisation/Wiz/MainPage.xaml
@@ -8,9 +8,14 @@
     xmlns:chartingPrimitivesToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting.Primitives;assembly=System.Windows.Controls.DataVisualization.Toolkit"
     mc:Ignorable="d"
     d:DesignHeight="300" d:DesignWidth="500"
-    Background="Transparent" >
+    >
 
-    <Grid x:Name="LayoutRoot" Background="Transparent">
+    <Grid x:Name="LayoutRoot">
+        <Grid.Background>
+            <LinearGradientBrush>
+                <GradientStop Color="#f3f3f3"></GradientStop>
+            </LinearGradientBrush>
+        </Grid.Background>
         <Grid Background="Transparent">
             <StackPanel Background="Transparent">
                 <ContentControl Content="Wizualizacja" HorizontalAlignment="Center" FontSize="14" FontWeight="Bold" Background="Transparent"/>
